<resources>
    <string name="app_name">WeatherApp2023</string>
    <string name="tampere">TAMPERE</string>
    <string name="_3c">-3C</string>
    <string name="_2m_s">2m/s</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="show_forecast">Show Forecast</string>
    <string name="refresh">Refresh</string>
    <string name="message_from_main_activity">Message from main Activity</string>
    <string name="back">Back</string>
    <string name="LOCATION_NOT_KNOWN">Location Not Known</string>
</resources>